--- a/README
+++ b/README
@@ -1,2 +1,9 @@
 To compile:
 coffee -c -j CoffeeTouch MethodsHelper.coffee StateMachine.coffee Finger.coffee EventRouter.coffee AnalyzerHelper.coffee Analyzer.coffee 
+
+Important:
+If you want to bind to all events, the callback function will have two arguments:
+first: name
+second: eventParam
+Example:
+	bind("all", function (name, event))
