--- a/README
+++ b/README
@@ -1,9 +1,16 @@
 To compile:
 coffee -c -j CoffeeTouch MethodsHelper.coffee StateMachine.coffee Finger.coffee EventRouter.coffee AnalyzerHelper.coffee Analyzer.coffee 
 
+Simple example: 
+	document.getElementById("myElement").onGesture("two:tap", function (event){
+		...
+	})
+
 Important:
 If you want to bind to all events, the callback function will have two arguments:
-first: name
-second: eventParam
+	first: name
+	second: eventParam
 Example:
-	onGesture("all", function (name, event))
+	document.getElementById("myElement").onGesture("all", function (name, event){
+		...
+	})
